--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <div class="hero">
                     <h1>Experience</h1>
                 </div>
+                <img id="flag" src="./public/Flag.jpg" alt="flag">
             </div>
             <div id="page2" data-scroll data-scroll-speed="-2.5">
                 <div id="video-container">
