basic responsive  done

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div id="page4" data-scroll data-scroll-speed="2.5">
                 <div id="page4-content">
                     <h1>About Obys</h1>
-                    <div class="underline"></div>
+                    <div class="underline underline4"></div>
                     <p>
                         Our agency is about people who love creating, designing
                         and
@@ -218,7 +218,7 @@
                             <p>Interaction, Graphic Design</p>
                         </div>
                     </div>
-                    <div class="underline"></div>
+                    <div class="underline underline4"></div>
                 </div>
             </div>
             <div id="page5" data-scroll data-scroll-speed="-2.5">
